--- a/asta-web2/asta-web2/todo.txt
+++ b/asta-web2/asta-web2/todo.txt
@@ -4,6 +4,10 @@ Pagina rilancio oggetto
 Aggiungere le varie mail di report e di passaggi stato item
 Check dimensioni file caricato
 Aggiungere validazione lato server per aggiunta/modifica oggetti
+Aggiungere sezione news in alto a destra: 15 giugno ore 12:37 xxx offre 20 euro per l'oggetto yy
+Bottone per aggiornare pagina rilancio, oppure ajax per autoaggiornarsi
+Aggiungere galleria immagini nella pagina rilancio
+Aggiungere apertura immagini in div modale nella pagina elenco
 
 Valutare se aggiungere lo stato ON_SELL_DISCOUNTED, che sarebbe lo stato degli invenduti, ribassando il prezzo
 Test in locale sezione admin
