--- a/asta-web2/asta-web2/todo.txt
+++ b/asta-web2/asta-web2/todo.txt
@@ -1,14 +1,16 @@
 
+Risultati asta, ciao rocco e bacheca fake
+Validazione client side del tipo di dato inserito. Numero etc
+Aggiungere le varie mail di report e di passaggi stato item
 Aggiungi messaggio evidente che inidica si tratti di una fase di test, con data inizio e data fine.
 Aggiungi messaggio ASTA FINITA, si aggiudica l'oggetto Marco De marchi (ad esempio)
 Aggiungi il bottone "OSSERVA" per ricevere email di notifica se qualcuno fa un'offerta.
-Aggiungere le varie mail di report e di passaggi stato item
+Aggiungere sezione news in alto a destra: 15 giugno ore 12:37 xxx offre 20 euro per l'oggetto yy
+
 Check dimensioni file caricato
 Aggiungere validazione lato server per aggiunta/modifica oggetti a seconda dello stato
-Aggiungere sezione news in alto a destra: 15 giugno ore 12:37 xxx offre 20 euro per l'oggetto yy
 Bottone per aggiornare pagina rilancio, oppure ajax per autoaggiornarsi
 Aggiungere galleria immagini nella pagina rilancio
-Aggiungere apertura immagini in div modale nella pagina elenco
 Inibisci rilanci troppo esosi
 
 Valutare se aggiungere lo stato ON_SELL_DISCOUNTED, che sarebbe lo stato degli invenduti, ribassando il prezzo
@@ -27,6 +29,7 @@ Cerca icona (più +) per aggiungere oggetti
 
 
 
+DONE Aggiungere apertura immagini in div modale nella pagina elenco
 DONE Pagina con elenco oggetti in vendita, con anteprima immagine, cliccabili per finire...Pagina rilancio oggetto
 DONE Aggiungere ore e minuti nel form inserimento oggetti.
 DONE Tabella/servizio per stampare sempre online il totale raccolto fino a quel momento.: senza tabella, ma con variabile in AstaServiceImpl
