--- a/asta-web2/asta-web2/todo.txt
+++ b/asta-web2/asta-web2/todo.txt
@@ -1,5 +1,5 @@
 
-Se si posticipa data scadenza, non togliere da IN VENDITA, seppure il processo lo rimette dopo poco
+Dove c'è un date format, usare il pattern già usato in AstaController
 Aggiungi bottone per smettere di osservare un oggetto
 Aggiungi ajax, sia nella pagina del rilancio, che in quella della lista
 Aggiungi cache per immagini
@@ -9,6 +9,7 @@ Aggiungi messaggio ASTA FINITA, si aggiudica l'oggetto Marco De marchi (ad esemp
 Aggiungere le varie mail di report
 Aggiungere sezione news in alto a destra: 15 giugno ore 12:37 xxx offre 20 euro per l'oggetto yy
 
+Se si posticipa data scadenza, non togliere da IN VENDITA, seppure il processo lo rimette dopo poco
 Aggiungi offerta automatica con tetto massimo (come hattrick)
 
 Check dimensioni file caricato
