--- a/asta-web2/asta-web2/todo.txt
+++ b/asta-web2/asta-web2/todo.txt
@@ -1,4 +1,5 @@
 
+BUGGISSIMO per il push del rilancio.. non passare la data dal web. Boh, cmq c'è un problema con le date (solo live)
 Dove c'è un date format, usare il pattern già usato in AstaController
 Aggiungi bottone per smettere di osservare un oggetto
 Aggiungi ajax, sia nella pagina del rilancio, che in quella della lista
