--- a/asta-web2/asta-web2/todo.txt
+++ b/asta-web2/asta-web2/todo.txt
@@ -1,10 +1,10 @@
 
-Ottimizzare memoria tomcat
 Togli possibilità di rilanciare con pwd frittella, NON solo il bottone, perchè con invio rilancio lo stesso
+Rilancio minimo 5 euro
+Ottimizzare memoria tomcat
 Ordina gli avvisi in rosso
 Togli le password del cazzo
 Bloccare chiamate updateItem se utente non loggato
-Rilancio minimo 5 euro
 BUG risolvi eccezione in asta controller nel metodo updateItem
 Item controller, nel catch del metodo privato viene stampato null
 Dove c'è un date format, usare il pattern già usato in AstaController
@@ -32,6 +32,17 @@ Validazione lunghezza campi testuali
 Cerca icona ingranaggi
 Cerca icona elimina
 Cerca icona (più +) per aggiungere oggetti
+
+
+***************************************************
+BE CAREFUL
+
+CalendarUtil: modificata per ottimizzare memoria
+ItemProcess: portate fuori dai metodi le variabili
+
+***************************************************
+
+
 
 BUGGISSIMO FIXED per il push del rilancio.. non passare la data dal web. Boh, cmq c'è un problema con le date (solo live)
 BUF FIXED rilancio inferiore ad 1 euro
