--- a/asta-web2/asta-web2/todo.txt
+++ b/asta-web2/asta-web2/todo.txt
@@ -1,26 +1,24 @@
 
-TODO subito: rollback modifiche imagecache e consolidare tutto. Subito.
-Togli possibilità di rilanciare con pwd frittella, NON solo il bottone, perchè con invio rilancio lo stesso
-Ottimizzare memoria tomcat
+BUG se un articolo è senza rilanci, non viene aggiornato in rosso. risolto ma da testare
 Ordina gli avvisi in rosso
-Togli le password del cazzo
+Togli possibilità di rilanciare con pwd frittella, NON solo il bottone, perchè con invio rilancio lo stesso
 Bloccare chiamate updateItem se utente non loggato
-BUG risolvi eccezione in asta controller nel metodo updateItem
+Togli le password del cazzo
+Aggiungere validazione lato server per aggiunta/modifica oggetti a seconda dello stato
+Inibire "osserva" per oggetti scaduti
 Item controller, nel catch del metodo privato viene stampato null
-Dove c'è un date format, usare il pattern già usato in AstaController
-Aggiungi cache per immagini
+BUG risolvi eccezione in asta controller nel metodo updateItem
+Ottimizzare memoria tomcat
 Aggiungi bottone per smettere di osservare un oggetto
 Aggiungere sezione news in alto a destra: 15 giugno ore 12:37 xxx offre 20 euro per l'oggetto yy
 I log..
 Aggiungi lista ultimi 5 rilanci nella pagina del rilancio
 Aggiungere le varie mail di report
 
-Inibire "osserva" per oggetti scaduti
 Se si posticipa data scadenza, non togliere da IN VENDITA, seppure il processo lo rimette dopo poco
 Aggiungi offerta automatica con tetto massimo (come hattrick)
 
 Check dimensioni file caricato
-Aggiungere validazione lato server per aggiunta/modifica oggetti a seconda dello stato
 
 
 
@@ -44,6 +42,9 @@ ItemProcess: portate fuori dai metodi le variabili
 
 
 
+DONE Aggiungi cache per immagini
+DONE Dove c'è un date format, usare il pattern già usato in AstaController
+DONE TODO subito: rollback modifiche imagecache e consolidare tutto. Subito. = Sistemata cache immagini. Sembra funzionare
 DONE Rilancio minimo 5 euro
 BUGGISSIMO FIXED per il push del rilancio.. non passare la data dal web. Boh, cmq c'è un problema con le date (solo live)
 BUF FIXED rilancio inferiore ad 1 euro
