Sito Live. Dati coi rilanci iniziali 1.0.1

--- a/asta-web2/asta-web2/todo.txt
+++ b/asta-web2/asta-web2/todo.txt
@@ -1,4 +1,5 @@
 
+TODO ripristinare il processo ogni 60 secondi quando sta per finire asta
 Storico rilanci, colare diversamente le righe pari e dispari.
 TEstare rilanci intorno alla scadenza asta. Push di rilanci etc.
 Togli possibilità di rilanciare con pwd frittella, NON solo il bottone, perchè con invio rilancio lo stesso
